[package]
name = "git-split-by-dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
color-eyre = "0.6.2"
serde_json = "1.0.108"
path-clean = "1.0.1"
tui-textarea = {version = "0.4.0", features = ["crossterm"]} 
ratatui = "0.25.0"
crossterm = "0.27.0"
rand = "0.8.5"

[[example]]
name = "crossterm"

[[example]]
name = "hello_world"

[[example]]
name = "list"
