[package]
name = "git-break-commits"
authors = ["Vinnam Kim <vinnam.kim@gmail.com>"]
version = "0.1.0"
homepage = "https://github.com/vinnamkim/git-break-commits"
repository = "https://github.com/vinnamkim/git-break-commits"
edition = "2021"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]
publish = true
license = "MIT"
readme = "./README.md"
description = """
`git-break-commits` is an interactive Command Line Interface (CLI) tool that helps break existing Git commits and reorganize them into new commits.
"""

[dependencies]
tempfile = "3.8.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
color-eyre = "0.6.2"
serde_json = "1.0.108"
path-clean = "1.0.1"
tui-textarea = {version = "0.4.0", features = ["crossterm"]} 
ratatui = "0.25.0"
crossterm = "0.27.0"
rand = "0.8.5"
clap = { version = "4.4.12", features = ["derive"] }
eyre = "0.6.11"
